PP-10329: Add send-otp endpoint to InviteResource
New endpoint is `/v1/api/invites/{code}/send-otp`

This will later replace `/v1/api/invites/{code}/otp/generate` and `/v1/api/invites/otp/resend`
