# openapi/adminusers_spec.yaml
@@ -279,6 +279,28 @@ paths:
         in the invite.
       tags:
       - Invites
+  /v1/api/invites/{code}/send-otp:
+    post:
+      operationId: sendOtp
+      parameters:
+      - example: d02jddeib0lqpsir28fbskg9v0rv
+        in: path
+        name: code
+        required: true
+        schema:
+          type: string
+      responses:
+        "204":
+          description: No content
+        "400":
+          description: Invalid payload
+        "404":
+          description: Not found
+        "412":
+          description: Precondition failed
+      summary: Sends otp verification code to the phone number registered in the invite
+      tags:
+      - Invites
   /v1/api/reset-password:
     post:
       operationId: resetForgottenPassword
